--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -3,8 +3,11 @@
     display: flex;
     margin: 0 auto;
     max-width: var(--wrapper);
-    justify-content: space-between;
     padding: var(--xl) var(--lg);
+}
+
+.navbar-logo {
+    margin: 0 var(--xl) 0 0;
 }
 
 .navbar-logo__link {
@@ -32,22 +35,23 @@
 
 .nav__link {
     background: transparent;
-    border: calc(var(--xs) / 4) dashed var(--default-80);
-    border-radius: var(--sm);
-    color: var(--default-40);
+    border: calc(var(--xs) / 4) dashed var(--default-60);
+    border-radius: var(--xs);
+    color: var(--default);
     cursor: pointer;
     display: block;
+    font-size: calc(var(--lg) / 1.6);
     padding: calc(var(--sm) + var(--xs)) var(--md);
 }
 
 .nav-toggle__link,
 .nav-toggle__link::before {
     background: transparent;
-    color: var(--default-60);
+    color: var(--default);
     cursor: pointer;
     font-size: var(--lg);
-    text-align: center;
     padding: var(--sm) var(--md);
+    text-align: center;
 }
 
 .nav__link:hover {
@@ -55,6 +59,12 @@
     border: calc(var(--xs) / 4) solid var(--highlight);
     color: var(--default);
     transition: 250ms;
+}
+
+.nav__link__active {
+    background: var(--highlight);
+    border: calc(var(--xs) / 4) solid var(--highlight);
+    color: var(--default);
 }
 
 @media (max-width: 1000px) {
